[package]
name = "storage"
version = "0.1.0"
authors = ["squili <squili@tutanota.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs"] }
anyhow = "1"
serde_json = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
